--- a/public/global.css
+++ b/public/global.css
@@ -1,63 +1,48 @@
+* {
+	margin: 0;
+	padding: 0;
+	border: none;
+	font: inherit;
+	box-sizing: border-box;
+}
+
+html {
+	font-size: 16px;
+}
+
+body {
+	background-color: black;
+	color: white;
+	font-size: 2rem;
+	font-family: 'IBM Plex Mono', monospace;
+}
+
+.black {
+	background-color: black;
+	color: white;
+}
+.white {
+	background-color: white;
+	color: black;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
 
-body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
-
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
 button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
+	background: transparent;
+	color: inherit;
+	cursor: pointer;
 }
 
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
+@keyframes blink {
+	0%, 100% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
 }
