--- a/public/global.css
+++ b/public/global.css
@@ -17,17 +17,7 @@ body {
 	font-family: 'IBM Plex Mono', monospace;
 }
 
-.black {
-	background-color: black;
-	color: white;
-}
-.white {
-	background-color: white;
-	color: black;
-}
-
 html, body {
-	position: relative;
 	width: 100%;
 	height: 100%;
 }
@@ -38,6 +28,24 @@ button {
 	cursor: pointer;
 }
 
+.black {
+	background-color: black;
+	color: white;
+}
+.white {
+	background-color: white;
+	color: black;
+}
+.full {
+	width: 100vw;
+	height: 100vh;
+}
+
+.button,
+button {
+	border: 2px solid currentColor;
+}
+
 @keyframes blink {
 	0%, 100% {
 		opacity: 0;
@@ -45,4 +53,60 @@ button {
 	50% {
 		opacity: 1;
 	}
+}
+
+input[type=file] {
+	color: transparent;
+	display: flex;
+	border: none;
+}
+input[type=file]::-webkit-file-upload-button {
+	visibility: hidden;
+}
+input[type=file]::-webkit-file-upload-button {
+	visibility: hidden;
+}
+input[type=file]::before {
+	content: 'Click here';
+	color: black;
+	display: inline-block;
+	padding: 0.5rem 1rem;
+	border: 2px solid black;
+	outline: none;
+	white-space: nowrap;
+	-webkit-user-select: none;
+	cursor: pointer;
+	width: 100%;
+	background-color: white;
+}
+input[type=file]:active {
+	outline: 0;
+}
+input[type=file]:active::before {
+	border-color: yellow;
+}
+select {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	border: 2px solid black;
+	border-radius: 0;
+	padding: 0.5rem 1rem;
+	outline: none;
+}
+.select-wrapper {
+	position: relative;
+}
+.select-wrapper::before {
+	position: absolute;
+	right: 0.7em;
+	top: 0.4em;
+	border-right: 3px solid black;
+	border-bottom: 3px solid black;
+	content: '';
+	width: 1.5rem;
+	height: 1.5rem;
+	display: block;
+	z-index: 10;
+	transform: rotate(45deg);
 }
