button hover effects

--- a/public/global.css
+++ b/public/global.css
@@ -46,6 +46,10 @@ button {
 	display: flex;
 }
 
+.button:hover,
+button:hover {
+	animation: blinkText 200ms linear infinite;
+}
 .button,
 button {
 	padding: 0.5rem 1rem;
@@ -53,12 +57,21 @@ button {
 	color: black;
 }
 
+
 @keyframes blink {
 	0%, 100% {
 		opacity: 0;
 	}
 	50% {
 		opacity: 1;
+	}
+}
+@keyframes blinkText {
+	0%, 100% {
+		color: black;
+	}
+	50% {
+		color: white;
 	}
 }
 
@@ -72,6 +85,9 @@ input[type=file]::-webkit-file-upload-button {
 }
 input[type=file]::-webkit-file-upload-button {
 	visibility: hidden;
+}
+input[type=file]:hover::before {
+	animation: blinkText 200ms linear infinite;
 }
 input[type=file]::before {
 	content: 'Click here to select file';
@@ -98,13 +114,16 @@ select {
 	padding: 0.5rem 1rem;
 	outline: none;
 }
+select:hover {
+	animation: blinkText 200ms linear infinite;
+}
 .select-wrapper {
 	position: relative;
 }
 .select-wrapper::before {
 	position: absolute;
 	right: 0.7em;
-	top: 0.4em;
+	top: 0.35em;
 	border-right: 3px solid black;
 	border-bottom: 3px solid black;
 	content: '';
@@ -113,4 +132,7 @@ select {
 	display: block;
 	z-index: 10;
 	transform: rotate(45deg);
+}
+.select-wrapper:hover::before {
+	animation: blink 200ms linear infinite;
 }
