--- a/public/global.css
+++ b/public/global.css
@@ -116,7 +116,7 @@ ui button
 
 .button:hover,
 button:hover {
-	animation: blinkText 200ms linear infinite;
+	/* animation: blinkText 200ms linear infinite; */
 }
 .button,
 button {
